[package]
name = "evm-state-reconstructing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evm-state-reconstructing"
path = "src/main.rs"

[dependencies]
ethereum-types = "0.14.1"
ethers = {version = "2.0", features = ["ws"] }
hex = "0.4.3"
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
futures = "0.3.31"
serde = "1.0.217"
serde_json = "1.0.137"
