[package]
name = "evm-state-reconstructing"
version = "0.1.0"
edition = "2021"

[lib]
name = "evm_state_reconstructing"
path = "src/lib.rs"

[[bin]]
name = "evm-state-reconstructing"
path = "src/main.rs"

[dependencies]
ethereum-types = "0.14.1"
ethers = {version = "2.0", features = ["ws"] }
hex = "0.4.3"
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
futures = "0.3.31"
serde = "1.0.217"
serde_json = "1.0.137"
borsh = "1.5.5"
borsh-derive = "1.5.5"
revm = { version = "19.3.0", features = ["ethersdb", "serde"] }
reqwest = {version = "0.12.12", features= ["json"] }
anyhow = "1.0.95"
